# scripts

./: pyproject.toml
scripts/: change_audio.py  embed_audio.py  flac_to_mp3.py  hard_sub.py  open-vpn.sh  rutracker_tracklist.py  warp-turn-off.sh  warp-turn-on.sh
scripts/raycast/: clean-restart.sh  rmpc-next.sh  rmpc-play.sh  rmpc-prev.sh
