[tool.ruff]
line-length = 120

# Add docstyle rules to the default ones
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.mypy]
strict = true
disallow_untyped_calls = false
allow_redefinition = true

[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.27.1",
    "mutagen>=1.47.0",
    "natsort>=8.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]
