[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E501",    # Line too long
    "ERA001",
    "ISC001",
    "PLR0913",
    "PTH123",  # open should be replaced by Path.open
]
select = [
    "ASYNC",
    "B",     # flake8-bugbear
    "C4",    # comprehensions
    "E",     # pycodestyle
    "ERA",   # remove commented code
    "F",     # Pyflakes
    "FURB",
    "I",     # isort
    "ISC",   # implicit string concat
    "NPY",   # numpy
    "PD",    # pandas
    "PERF",
    "PGH",   # use specific error code for lint ignores
    "PL",    # pylint
    "PT",    # pytest
    "PTH",   # pathlib
    "RET",   # return
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
]

[tool.mypy]
allow_redefinition = true
disallow_untyped_calls = false
no_implicit_reexport = false
strict = true

[project]
dependencies = [
    "basedpyright>=1.27.1",
    "mutagen>=1.47.0",
    "natsort>=8.4.0",
]
description = "Add your description here"
name = "scripts"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build~=0.8.0"]

[tool.uv.build-backend]
module-name = "src"
module-root = ""
